--- a/notebooks/First_reading.ipynb
+++ b/notebooks/First_reading.ipynb
@@ -21,9 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the dataset:  (53973, 17)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -343,13 +350,52 @@
        "9                                                NaN            NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Shape of the dataset: \", df.shape)\n",
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "business_id              0.000000\n",
+       "business_name            0.000000\n",
+       "business_address         0.000000\n",
+       "business_city            0.000000\n",
+       "business_state           0.000000\n",
+       "business_postal_code     0.021974\n",
+       "business_latitude        0.490949\n",
+       "business_longitude       0.490949\n",
+       "business_location        0.490949\n",
+       "business_phone_number    0.672577\n",
+       "inspection_id            0.000000\n",
+       "inspection_date          0.000000\n",
+       "inspection_score         0.267393\n",
+       "inspection_type          0.000000\n",
+       "violation_id             0.254201\n",
+       "violation_description    0.254201\n",
+       "risk_category            0.254201\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# proportion of NaN values\n",
+    "df.isna().sum() / df.shape[0]"
    ]
   },
   {
