--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a style=\"color:#0131B4\">Our goal is to estimate the restaurant score in order to help health inspectors select places that may not respect the health quality needed for a resrtaurant.</a>"
+    "<a style=\"color:#0131B4\">Our goal is to estimate the restaurant score in order to help health inspectors select places that may not respect the health quality needed for a restaurant.</a>"
    ]
   },
   {
@@ -144,7 +144,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
