Fixed problems and creation of submissions folder

--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -190,19 +190,22 @@
     "* `rating` - *number* - required - Grade of the restaurant: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50.\n",
     "* `n_reviews` - *number* - required - Number of reviews of the restaurant.\n",
     "* `type` - *string* - not required - Type of the restaurant. \n",
-    "* `price_range` - *string* - not required - Price range of the restaurant: \"$\\$$\", \"$\\$\\$$ - $\\$\\$\\$$\" and \"$\\$\\$\\$\\$$\". \n",
-    "* `price` - *string* - required - Price category of the restaurant: \"cheap_eats\", \"mid_range\" and \"fine_dining\". \n",
-    "\n",
-    "The nerge between the two datasets will be done using the columns: `name`, ... ??\n",
-    "\n",
-    "\n",
+    "* `price_range` - *string* - not required - Price range of the restaurant. \n",
+    "* `price` - *string* - required - Price category of the restaurant: \"cheap_eats\", \"mid_range\" and \"fine_dining\". "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The merge between the two datasets will be done using the columns: `name`, ... ??\n",
     "\n",
     "### Training and test\n",
     "\n",
     "The company revenue training dataset has been split into 'training' and 'test' subsets. The shapes are:\n",
     "\n",
     "* training: (nb_rows, nb_features)\n",
-    "* test: (nb_rows, nb_features)\n"
+    "* test: (nb_rows, nb_features)"
    ]
   },
   {
@@ -219,11 +222,11 @@
     "\n",
     "$$\n",
     "\\begin{align*}\n",
-    "& \\text{loss} = \\text{RMSE} * \\text{penalization}  \\\\\n",
-    "\\text{with   } & \\text{penalization} = \\left\\{\n",
+    "& \\textrm{loss} = \\textrm{RMSE} * \\textrm{penalization}  \\\\\n",
+    "\\textrm{with   } & \\textrm{penalization} = \\left\\{\n",
     "    \\begin{array}{ll}\n",
-    "        1.5 \\text{  if y_true} < \\text{y_pred} \\\\\n",
-    "        1 \\text{  otherwise}\n",
+    "        1.5 \\textrm{  if y_true} < \\textrm{y_pred} \\\\\n",
+    "        1 \\textrm{  otherwise}\n",
     "    \\end{array}\n",
     "\\right.\n",
     "\\end{align*}\n",
