--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "# <a style=\"color:#0131B4\"> DataCamp Project : </a>\n",
-    "# <a style=\"color:#0131B4\">Helping Health Inspectors calculate Restaurant Scores (LIVES Standard) to decide whether to inspect a restaurant or not in San Francisco</a>"
+    "# <a style=\"color:#0131B4\">Helping Health Inspectors calculate restaurant score in San Francisco</a>"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  <a style=\"color:#0131B4\"> Authors : Romain Fabre, Julien Lenhardt, Luz Pascal, Benjamin Wallyn, Emma Demarecaux, Charles Desaleux</a>"
+    "####  <a style=\"color:#0131B4\"> Authors : Emma Demarecaux, Charles Desaleux, Romain Fabre, Julien Lenhardt, Luz Pascal, Benjamin Wallyn</a>"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "\n",
     "##  <a href=\"#II.-Exploratory-Data-Analysis\" style=\"color:#0131B4\"> II. Exploratory Data Analysis </a>\n",
     "\n",
-    "##  <a href=\"#III.-Model-to-submit\" style=\"color:#0131B4\"> III. Model to submit </a>\n",
+    "##  <a href=\"#III.-Workflow\" style=\"color:#0131B4\"> III. Workflow</a>\n",
     "\n",
     "1. Feature Extractor\n",
     "2. Regressor\n",
@@ -76,9 +76,9 @@
    "metadata": {},
    "source": [
     "The Health Department has developed an inspection report and scoring system. After conducting an inspection of the facility, the Health Inspector calculates a score based on the violations observed. Violations can fall into:\n",
-    "- **high risk category**: records specific violations that directly relate to the transmission of food borne illnesses, the adulteration of food products and the contamination of food-contact surfaces;\n",
-    "- **moderate risk category**: records specific violations that are of a moderate risk to the public health and safety;\n",
-    "- **low risk category**: records violations that are low risk or have no immediate risk to the public health and safety."
+    "- **High risk category**: records specific violations that directly relate to the transmission of food borne illnesses, the adulteration of food products and the contamination of food-contact surfaces;\n",
+    "- **Moderate risk category**: records specific violations that are of a moderate risk to the public health and safety;\n",
+    "- **Low risk category**: records violations that are low risk or have no immediate risk to the public health and safety."
    ]
   },
   {
@@ -137,10 +137,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some KPIs:\n",
+    "Here are some indicators that might measure the impact of our project:\n",
     "\n",
     "- Number of people with foodborne illnesses in San Francisco.\n",
-    "- Number of visits that result in a C score (meaning that the health inspectors didn't lose their time)"
+    "- Number of visits that result in a C score (meaning that the health inspectors didn't lose their time).\n",
+    "- Number of restaurants than maintain a clean record after an unscheduled inpection."
    ]
   },
   {
@@ -171,8 +172,8 @@
     "* `business_phone_number` - *string* - not required - Phone number for a business including country specific dialing information.\n",
     "* `inspection_id` - *string* - required - A unique identifier for a given inspection.\n",
     "* `inspection_date` - *date* - required - Date of the inspection in YYYY-MM-DD format. *Example: 2015-08-22*.\n",
-    "* `inspection_score` - *number* - not required - Calculated inspection score, graded from 0 to 100.\n",
-    "* `inspection_type` - *string* - not required - String representing the type of inspection. Must be one of: initial, routine, follow-up, complaint.\n",
+    "* `inspection_score` - *number* - not required - Calculated inspection score, graded from 0 to 100. **Target score to predict**.\n",
+    "* `inspection_type` - *string* - not required - String representing the type of inspection. Must be one of: initial, routine, unscheduled, follow-up, complaint.\n",
     "* `violation_id` - *string* - not required - A unique identifier for a given violation.\n",
     "* `violation_description` - *string* - not required - One line description of the violation. If violation data is provided then this field is required.\n",
     "* `risk_category` - *string* - not required - This string represents the non-numeric result of the inspection: \"Low Risk\", \"Moderate Risk\" or \"High Risk\".\n",
@@ -180,32 +181,42 @@
     "\n",
     "### Tripadvisor\n",
     "\n",
-    "In order to gain infornation on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. We are aiming at predicting that score from the infornation available in Tripadvisor in order to help Health Inspectors decide whether to inspect a restaurant or not in San Francisco based on the predicted score. Each row represents a restaurant on Tripadvisor. The following information is provided for each business:\n",
+    "In order to gain information on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. Our goal is to predict that score from the information available on Tripadvisor in order to help Health Inspectors decide whether or not to inspect a restaurant in San Francisco based on the predicted scores. We chose to use Tripadvisor data because it provides constumer insight that can be usesul to identifiy potential sanitary risks and violations. Each row represents a restaurant on Tripadvisor. The following information is provided for each business:\n",
     "\n",
     "* `link` - *string* - required - Tripadvisor link to the restaurant page.\n",
-    "* `date` - *date* - required - Date of the last review of the restaurant?\n",
     "* `name` - *string* - required - Common name of the business.\n",
-    "* `first_review` - *string* - required - First review of the restaurant.\n",
-    "* `second_review` - *string* - required - Second review of the restaurant.\n",
     "* `rating` - *number* - required - Grade of the restaurant: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50.\n",
     "* `n_reviews` - *number* - required - Number of reviews of the restaurant.\n",
-    "* `type` - *string* - not required - Type of the restaurant. \n",
+    "* `price_type` - *string* - not required - Price category of the restaurant: \"cheap_eats\", \"mid_range\", \"fine_dining\", \"Other_category\". \n",
+    "* `borough` - *string* - required - Borough of the restaurant.\n",
     "* `price_range` - *string* - not required - Price range of the restaurant. \n",
-    "* `price` - *string* - required - Price category of the restaurant: \"cheap_eats\", \"mid_range\" and \"fine_dining\". "
+    "* `cuisines` - *string* - not required - Type of the restaurant. \n",
+    "* `special_diets` - *string* - not required - Wether the restaurant offers vegetarian/vegan/gluten/etc free food.\n",
+    "* `meals` - *string* - not required - Type of meals served in the restaurant. Example: Lunch, Dinner, Drinks.\n",
+    "* `features` - *string* - not required - Additional features/facilities of the restaurant. Example: Parking, Outdoor seating.\n",
+    "* `n_review_excellent` - *number* - required - Number of excellent reviews of the restaurant.\n",
+    "* `n_review_verygood` - *number* - required - Number of very good reviews of the restaurant.\n",
+    "* `n_review_average` - *number* - required - Number of average reviews of the restaurant.\n",
+    "* `n_review_poor` - *number* - required - Number of poor reviews of the restaurant.\n",
+    "* `n_review_terrible` - *number* - required - Number of terrible reviews of the restaurant.\n",
+    "* `list_reviews` - *string* - required - List of last 5 reviews of the restaurant.\n",
+    "\n",
+    "\n",
+    "Those two datasets are present in the data/ directory and are added by default to all submissions when submitting to RAMP studio. When testing your submission locally however, it is important to copy those files (tripadvisor.csv.zip and previous_inspections.csv.zip) into the submission directory of the submission you wish to test."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The merge between the two datasets will be done using the columns: `name`, ... ??\n",
-    "\n",
     "### Training and test\n",
     "\n",
-    "The company revenue training dataset has been split into 'training' and 'test' subsets. The shapes are:\n",
+    "The restaurant score dataset dataset has been split into 'training' and 'test' subsets. The shapes are:\n",
     "\n",
     "* training: (nb_rows, nb_features)\n",
-    "* test: (nb_rows, nb_features)"
+    "* test: (nb_rows, nb_features)\n",
+    "\n",
+    "We have considered a simpler version of the dataset with one row per restaurant, keeping only the last available inspection. You may enrich this initial dataset with *tripadvisor.csv.zip* and *previous_inspections.csv.zip* available in all submission directories."
    ]
   },
   {
@@ -220,17 +231,9 @@
     "\n",
     "Therefore over-predicting the health quality os more harmful than under-predicting it. We define our metric as follows:\n",
     "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "& \\textrm{loss} = \\textrm{RMSE} * \\textrm{penalization}  \\\\\n",
-    "\\textrm{with   } & \\textrm{penalization} = \\left\\{\n",
-    "    \\begin{array}{ll}\n",
-    "        1.5 \\textrm{  if y_true} < \\textrm{y_pred} \\\\\n",
-    "        1 \\textrm{  otherwise}\n",
-    "    \\end{array}\n",
-    "\\right.\n",
-    "\\end{align*}\n",
-    "$$"
+    "$$\\textrm{Loss} = \\sqrt{\\frac{1}{n} \\sum_{i=1}^n (\\textrm{y_pred}_i - \\textrm{y_true}_i)^2*\\textrm{penalization}_i}$$\n",
+    "\n",
+    "with $$\\textrm{penalization}_i = 1.5*(\\textrm{y_true}_i < \\textrm{y_pred}_i) + 1*(\\textrm{y_true}_i \\geq \\textrm{y_pred}_i)$$"
    ]
   },
   {
@@ -255,6 +258,23 @@
    "metadata": {},
    "source": [
     "#  <a style=\"color:#0131B4\">II. Exploratory Data Analysis</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Possible improvements:\n",
+    "- take all inspections as input instaed of only the last one"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merge\n",
+    "\n",
+    "The merge between the two datasets will be done using `business_name` from the Restaurant Scores data and `name` from the Tripadvisor data. The business names were lowercased and special characters (punctuations, white spaces and numbers) were removed."
    ]
   },
   {
