--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -278,6 +278,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from problem import get_train_data\n",
+    "\n",
+    "X_df, y_array = get_train_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tripadvisor = pd.read_csv('data/external/tripadvisor_dataset.csv', low_memory=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,6 +318,17 @@
    "metadata": {},
    "source": [
     "## <a style=\"color:#0131B4\">1. Feature Extractor</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tripadvisor['name'] = tripadvisor['name'].str.lower().str.replace('[^\\w]','').apply(lambda s : ''.join(filter(str.isalpha, s)))\n",
+    "tripadvisor['price_range_min'] = list(map(lambda x: get_range_number(x, 'min'), merged[\"price_range\"]))\n",
+    "tripadvisor['price_range_max'] = list(map(lambda x: get_range_number(x, 'max'), merged[\"price_range\"]))"
    ]
   },
   {
