Add description about scrapping

--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -181,7 +181,8 @@
     "\n",
     "### Tripadvisor\n",
     "\n",
-    "In order to gain information on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. Our goal is to predict that score from the information available on Tripadvisor in order to help Health Inspectors decide whether or not to inspect a restaurant in San Francisco based on the predicted scores. We chose to use Tripadvisor data because it provides constumer insight that can be usesul to identifiy potential sanitary risks and violations. Each row represents a restaurant on Tripadvisor. The following information is provided for each business:\n",
+    "In order to gain information on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. Our goal is to predict that score from the information available on Tripadvisor in order to help Health Inspectors decide whether or not to inspect a restaurant in San Francisco based on the predicted scores. We chose to use Tripadvisor data because it provides constumer insight that can be usesul to identifiy potential sanitary risks and violations. The scraping was done using the selenium package in order to search restaurants from the San Francisco dataset on Tripadvisor. The first result of each request is selected. Once on the restaurant description page, the package Beautifulsoup extract different information about the restaurant.\n",
+    "Each row represents a restaurant on Tripadvisor. The following information is provided for each business:\n",
     "\n",
     "* `link` - *string* - required - Tripadvisor link to the restaurant page.\n",
     "* `name` - *string* - required - Common name of the business.\n",
@@ -2065,7 +2066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
