--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -51,6 +51,11 @@
     "\n",
     "##  <a href=\"#II.-Exploratory-Data-Analysis\" style=\"color:#0131B4\"> II. Exploratory Data Analysis </a>\n",
     "\n",
+    "1. Library imports\n",
+    "2. Exploring the training data\n",
+    "3. The restaurants across San Francisco and its neighbourhoods\n",
+    "4. Tripadvisor data\n",
+    "\n",
     "##  <a href=\"#III.-Workflow\" style=\"color:#0131B4\"> III. Workflow</a>\n",
     "\n",
     "1. Feature Extractor\n",
@@ -114,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a style=\"color:#0131B4\">Our goal is to estimate the restaurant score in order to help health inspectors select places that may not respect the health quality needed for a restaurant.</a>"
+    "**Our goal is to estimate the restaurant score in order to help health inspectors select places that may not respect the health quality needed for a restaurant.**"
    ]
   },
   {
@@ -137,11 +142,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some indicators that might measure the impact of our project:\n",
+    "Here are some indicators that can measure the impact of our project:\n",
     "\n",
     "- Number of people with foodborne illnesses in San Francisco.\n",
-    "- Number of visits that result in a C score (meaning that the health inspectors didn't lose their time).\n",
-    "- Number of restaurants than maintain a clean record after an unscheduled inpection."
+    "- Number of visits that result in a 'C score (meaning that the health inspectors didn't lose their time).\n",
+    "- Number of restaurants than maintain a clean record after an unscheduled inspection."
    ]
   },
   {
@@ -203,7 +208,7 @@
     "* `list_reviews` - *string* - required - List of last 5 reviews of the restaurant.\n",
     "\n",
     "\n",
-    "Those two datasets are present in the data/ directory and are added by default to all submissions when submitting to RAMP studio. When testing your submission locally however, it is important to copy those files (tripadvisor_dataset.csv.zip and historic_restaurant_scores.csv.zip) into the submission directory of the submission you wish to test."
+    "Those two datasets are present in the data/ directory and are added by default to all submissions when submitting to RAMP studio. When testing your submission locally however, it is important to copy those files (tripadvisor_dataset.csv and historic_restaurant_scores.csv) into the submission directory of the submission you wish to test."
    ]
   },
   {
@@ -212,12 +217,12 @@
    "source": [
     "### Training and test\n",
     "\n",
-    "The restaurant score dataset dataset has been split into 'training' and 'test' subsets. The shapes are:\n",
+    "The restaurant score dataset containing only the last inspection of each restaurant has been split into 'training' and 'test' subsets. The shapes are:\n",
     "\n",
-    "* training: (2479, 76)\n",
-    "* test: (621, 76)\n",
+    "* training: 2479 rows\n",
+    "* test: 621 rows\n",
     "\n",
-    "We have considered a simpler version of the dataset with one row per restaurant, keeping only the last available inspection. You may enrich this initial dataset with *tripadvisor_dataset.csv.zip* and *historic_restaurant_scores.csv.zip* available in all submission directories."
+    "We have considered a simpler version of the dataset with one row per restaurant, keeping only the last available inspection. You may enrich this initial dataset with *tripadvisor_dataset.csv* and *historic_restaurant_scores.csv* available in all submission directories."
    ]
   },
   {
@@ -227,12 +232,12 @@
     "## <a style=\"color:#0131B4\">4. Business metric</a>\n",
     "\n",
     "We are in a regression problem, predicting a sanitary score between 0 and 100 (100 being the perfect score). First, we want our prediction values to be close to our true values, therefore considering the root-mean-square error (RMSE) to measure the differences between values can be a good start. However, the impacts of a high predicted value or a low predictied value, compared with the true value, are different:\n",
-    "- predicting a higher value than the true value will overrate the health quality of the restaurant. This could have a great impact on the risk, leading the health inspectors to believe that an inspection of the restaurant might not be necessary while there might be some potential violations. Therefore, this case should appear in our predictions.\n",
-    "- predicting a lower value than the true value is prefered: in the worst case, the health inspectors will inspect a very clean restaurant, which will make them loss their time, but will not put people in jeopardy.\n",
+    "- predicting a higher value than the true value will overrate the health quality of the restaurant. This could have a great impact on the risk, leading the health inspectors to believe that an inspection of the restaurant might not be necessary while there might be some potential violations. Therefore, this case should be penalized in our predictions.\n",
+    "- predicting a lower value than the true value is prefered: in the worst case, the health inspectors will inspect a very clean restaurant, which will make them lose their time, but will not put people in jeopardy.\n",
     "\n",
-    "Therefore over-predicting the health quality os more harmful than under-predicting it. We define our metric as follows:\n",
+    "Therefore over-predicting the health quality is more harmful than under-predicting it. We define our metric as follows:\n",
     "\n",
-    "$$\\textrm{Loss} = \\sqrt{\\frac{1}{n} \\sum_{i=1}^n (\\textrm{y_pred}_i - \\textrm{y_true}_i)^2*\\textrm{penalization}_i}$$\n",
+    "$$\\textrm{score} = \\sqrt{\\frac{1}{n} \\sum_{i=1}^n (\\textrm{y_pred}_i - \\textrm{y_true}_i)^2*\\textrm{penalization}_i}$$\n",
     "\n",
     "with $$\\textrm{penalization}_i = 1.5*(\\textrm{y_true}_i < \\textrm{y_pred}_i) + 1*(\\textrm{y_true}_i \\geq \\textrm{y_pred}_i)$$"
    ]
@@ -241,10 +246,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loss interpretation:\n",
+    "Score interpretation:\n",
     "\n",
-    "* A lower loss is better.\n",
-    "* If the difference between `y_true` and `y_pred` values is the same, the loss is lower if `y_true` > `y_pred`."
+    "* A lower score is better.\n",
+    "* If the difference between `y_true` and `y_pred` values is the same, the score is lower if `y_true` > `y_pred`."
    ]
   },
   {
@@ -265,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Library imports"
+    "## <a style=\"color:#0131B4\">1. Library imports</a>"
    ]
   },
   {
@@ -294,14 +299,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring the training data"
+    "## <a style=\"color:#0131B4\">2. Exploring the training data</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We load our training set using the function \"get_train_data_df\" that will fetch the data and return it as two separates dataframes : one containing inputs and the other the target variable. The target data is the output that we wish here to predict ie the inspection score of the restaurant (and thus its category). The input dataframe consists of the the different features coming from the inspection of the restaurant (more details about those features in the previous description of the dataset)."
+    "We load our training set using the function `get_train_data` that will fetch the data and return it as two separates object : a dataframe containing the inputs and an array with the target data. The target data is the output that we wish to predict, i.e the inspection score of the restaurant (and thus its category). The input dataframe consists of the different features coming from the inspections of the restaurants (you may find more details about those features in the previous description of the dataset)."
    ]
   },
   {
@@ -1046,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The restaurants across San Francisco and its neighbourhoods"
+    "## <a style=\"color:#0131B4\">3. The restaurants across San Francisco and its neighbourhoods</a>"
    ]
   },
   {
@@ -1060,7 +1065,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the visualization of our data we will use here all the inspections coming from the complete file historic_restaurant_scores.csv. To represent the data across all neighbourhoods of San Francisco we will import additionnal files geo_export contained in the folder data/external."
+    "For the visualization of our data we will use only here all the inspections coming from the complete file *historic_restaurant_scores.csv*. To represent the data across all neighbourhoods of San Francisco we will import additionnal files *geo_export* from the folder data/external."
    ]
   },
   {
@@ -1308,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TripAdvisor data"
+    "## <a style=\"color:#0131B4\">4. Tripadvisor data</a>"
    ]
   },
   {
@@ -1391,13 +1396,6 @@
     "ctx.add_basemap(ax, zoom=14)\n",
     "ax.set_title(\"Mean of TripAdvisor rating per Neighborhood\", fontsize = 20)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can first look at the distribution of the inspection score across our data. We highlight the three categories of classification depending on the inspection score received by the restaurant."
    ]
   },
   {
@@ -1560,7 +1558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that mid_range restaurants are more likely to have bad inspection. \n",
+    "We see that mid_range restaurants are more likely to have bad inspections. \n",
     "\n",
     "Now, we analyze the influence of the cuisine over several features of the dataset."
    ]
@@ -1646,7 +1644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, American, Chinese and Mexican cuisines are more likely to have 0 ratings on trip advisor. However, American cuisine have more really good ratings compared to others.\n",
+    "As we can see, American, Chinese and Mexican cuisines are more likely to have 0 ratings on tripadvisor. However, American cuisine is more likely to have really good ratings compared to others.\n",
     "\n",
     "We then analyze the influence of the cuisine over the inspection score."
    ]
@@ -1843,7 +1841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use a Random Forest Regressor model for the baseline model"
+    "We will use a Random Forest Regressor model for the baseline model."
    ]
   },
   {
@@ -1944,7 +1942,9 @@
    "source": [
     "First, ensure that `ramp-worflow` is installed (see the [github repo](https://github.com/paris-saclay-cds/ramp-workflow) for installation instructions). \n",
     "\n",
-    "Now you can use `ramp_test_submission`. This command will test on files in [`submissions/starting_kit`](/submissions/starting_kit) by default. To specify testing on a different folder use the flag `--submission`. For example to run the test on `submissions/my_model` use: `ramp_test_submission --submission my_model`."
+    "Now you can use `ramp_test_submission`. This command will test on files in [`submissions/starting_kit`](/submissions/starting_kit) by default. To specify testing on a different folder use the flag `--submission`. For example to run the test on `submissions/my_model` use: `ramp_test_submission --submission my_model`.\n",
+    "\n",
+    "The scoring is based on our metric `penalized_RMSE` and `f1score_category` defined in `problem.py`."
    ]
   },
   {
