--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -1065,7 +1065,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the visualization of our data we will use only here all the inspections coming from the complete file *historic_restaurant_scores.csv*. To represent the data across all neighbourhoods of San Francisco we will import additionnal files *geo_export* from the folder data/external."
+    "For the visualization of our data we will use all the inspections coming from the file *historic_restaurant_scores.csv*. To represent the data across all neighbourhoods of San Francisco we will import additionnal files *geo_export* from the folder data/external."
    ]
   },
   {
@@ -1090,7 +1090,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can first look at the distribution of the inspection score across our data. We highlight the three categories of classification depending on the inspection score recieved by the restaurant."
+    "We can first look at the distribution of the inspection score across our data. We highlight the three categories of classification depending on the inspection score received by the restaurant."
    ]
   },
   {
