--- a/restaurant_scores_starting_kit.ipynb
+++ b/restaurant_scores_starting_kit.ipynb
@@ -183,10 +183,12 @@
     "* `violation_description` - *string* - not required - One line description of the violation. If violation data is provided then this field is required.\n",
     "* `risk_category` - *string* - not required - This string represents the non-numeric result of the inspection: \"Low Risk\", \"Moderate Risk\" or \"High Risk\".\n",
     "\n",
+    "`business_latitude` and `business_longitude` were added afterwards using a GeoPy script to help you with the location.\n",
     "\n",
     "### Tripadvisor\n",
     "\n",
-    "In order to gain information on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. Our goal is to predict that score from the information available on Tripadvisor in order to help Health Inspectors decide whether or not to inspect a restaurant in San Francisco based on the predicted scores. We chose to use Tripadvisor data because it provides constumer insight that can be usesul to identifiy potential sanitary risks and violations. The scraping was done using the selenium package in order to search restaurants from the San Francisco dataset on Tripadvisor. The first result of each request is selected. Once on the restaurant description page, the package Beautifulsoup extract different information about the restaurant.\n",
+    "In order to gain information on restaurants, we decided to scrap the restaurants on Tripadvisor for which we have an inspection score available. Our goal is to predict that score from the information available on Tripadvisor in order to help Health Inspectors decide whether or not to inspect a restaurant in San Francisco based on the predicted scores. We chose to use Tripadvisor data because it provides constumer insight that can be usesul to identifiy potential sanitary risks and violations. The scraping was done using the selenium package in order to search restaurants from the San Francisco dataset on Tripadvisor. The first result of each request is selected. Once on the restaurant description page, the package Beautifulsoup extracts different information about the restaurant. Since the top result is not always the restaurant we were looking for, we merged this dataset with a certain number of San Francisco restaurants data we scrapped to increase the chances of a match. \n",
+    "\n",
     "Each row represents a restaurant on Tripadvisor. The following information is provided for each business:\n",
     "\n",
     "* `link` - *string* - required - Tripadvisor link to the restaurant page.\n",
@@ -230,6 +232,7 @@
    "metadata": {},
    "source": [
     "## <a style=\"color:#0131B4\">4. Business metric</a>\n",
+    "### <a style=\"color:#0131B4\">4.1 Main metric</a>\n",
     "\n",
     "We are in a regression problem, predicting a sanitary score between 0 and 100 (100 being the perfect score). First, we want our prediction values to be close to our true values, therefore considering the root-mean-square error (RMSE) to measure the differences between values can be a good start. However, the impacts of a high predicted value or a low predictied value, compared with the true value, are different:\n",
     "- predicting a higher value than the true value will overrate the health quality of the restaurant. This could have a great impact on the risk, leading the health inspectors to believe that an inspection of the restaurant might not be necessary while there might be some potential violations. Therefore, this case should be penalized in our predictions.\n",
@@ -257,6 +260,24 @@
    "metadata": {},
    "source": [
     "<img src=\"reports/figures/inpection.jpg\" height=\"500\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <a style=\"color:#0131B4\">4.2 Aditionnal metrics</a>\n",
+    "Predict a restaurant score is sufficient to estimate to which category it belongs. Hence, we will aim to maximize the precision and the recall of categories B and C, meanwhile minimizing the above score.\n",
+    "In fact, we need to maximazine the recall because it is important to target all the restaurants with a lower score to inspect them in priority to protect the population. Moreover, we need to have a high precision for these categories in order to optimize inspections by not loosing time reviewing restaurants which were false positive. To balance the optimization of these two metrics, one can use the F1-score. It is an harmonic mean of the two measures and thus, maximizing this score tries to balance both. \n",
+    "\n",
+    "$$\n",
+    "    \\text{F1-score} = 2 * \\frac{P . R}{P + R}\\enspace.\n",
+    "$$\n",
+    "\n",
+    "Instead of maximizing the F1-score for each category B and C, we will consider a binary framework: A against B/C.\n",
+    "Thus, we will compute the F1-score of predicting a score strictly lower than 90. \n",
+    "\n",
+    "Accordingly, our goal is to predict the inspection score as accurate as possible while providing a high F1-score."
    ]
   },
   {
@@ -2037,7 +2058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
